springbox-auth-server/kubernetes/springbox-auth-server-deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: springbox
    component: auth-server
  name: springbox-auth-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springbox
      component: auth-server
  template:
    metadata:
      labels:
        app: springbox
        component: auth-server
    spec:
      containers:
      - image: jkwong/springbox-auth-server:latest
        imagePullPolicy: Always
        name: springbox-auth-server
        ports:
        - containerPort: 9999
          name: http 
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
      - name: config
        configMap:
          name: wobbly-goose-spring-config-server-bootstrap
