springbox-auth-server/kubernetes/springbox-auth-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: springbox
    component: auth-server
  name: springbox-auth-server
spec:
  ports:
  - name: http
    port: 9999
    protocol: TCP
    targetPort: 9999
  selector:
    app: springbox
    component: auth-server
  type: ClusterIP
